--- a/Data augmentation/updated_data_transformation.ipynb
+++ b/Data augmentation/updated_data_transformation.ipynb
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Processed data has been saved to /content/augmented_train_subtask2.csv\n"
           ]
@@ -169,8 +169,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Processed data has been saved to None\n"
           ]
@@ -180,7 +180,7 @@
         "df3 = pd.concat([df2, df], ignore_index=True)\n",
         "\n",
         "# Save the combined DataFrame to a new CSV file\n",
-        "output_csv_path = df3.to_csv('/content/combined_data.csv', index=False)\n",
+        "output_csv_path = df3.to_csv('/content/train_subtask2_augmented.csv', index=False)\n",
         "\n",
         "print(f\"Processed data has been saved to {output_csv_path}\")"
       ]
@@ -207,17 +207,17 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'/content/augmented_train_subtask2.csv'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'/content/augmented_train_subtask2.csv'"
+            ]
           },
+          "execution_count": 1,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -283,6 +283,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TtU19xNLf57L"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "\n",
@@ -309,15 +314,15 @@
         "\n",
         "# Store the DataFrame into  CSV file with the added 'sent_id' column\n",
         "df.to_csv('/content/augmented_train_subtask2.csv', index=None)"
-      ],
-      "metadata": {
-        "id": "TtU19xNLf57L"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "I2uULT25f5s3"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import re\n",
@@ -335,34 +340,22 @@
         "\n",
         "# Store the DataFrame into a CSV file with the added columns\n",
         "df.to_csv('/content/augmented_train_subtask2.csv', index=None)"
-      ],
-      "metadata": {
-        "id": "I2uULT25f5s3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df2 = pd.read_csv('/content/train_subtask2.csv')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "RR4Or8ySgEGT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df2 = pd.read_csv('/content/train_subtask2.csv')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df3 = pd.concat([df2, df], ignore_index=True)\n",
-        "\n",
-        "# Save the combined DataFrame to a new CSV file\n",
-        "output_csv_path = df3.to_csv('/content/combined_data.csv', index=False)\n",
-        "\n",
-        "print(f\"Processed data has been saved to {output_csv_path}\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -370,19 +363,29 @@
         "id": "q3sRGcxHgEC2",
         "outputId": "8e08454e-caa3-4952-b680-1d83b55602ed"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Processed data has been saved to None\n"
           ]
         }
+      ],
+      "source": [
+        "df3 = pd.concat([df2, df], ignore_index=True)\n",
+        "\n",
+        "# Save the combined DataFrame to a new CSV file\n",
+        "output_csv_path = df3.to_csv('/content/combined_data.csv', index=False)\n",
+        "\n",
+        "print(f\"Processed data has been saved to {output_csv_path}\")"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -398,9 +401,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
